testing/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: surveillance
  labels:
    app.kubernetes.io/name: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
  clusterIP: None
  type: ClusterIP
